# rcpch-nhs-organisations

./: .gitattributes  .gitignore  .python-version  Caddyfile  Dockerfile  README.md  celerybeat-schedule  db.sqlite3  docker-compose.dev-init.yml  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main_rcpch-nhs-organisations.yml
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/developer/: database_maintenance.md  models.md  seeding.md
documentation/docs/home/: citation.md  getting-started.md  nhs-organisations.md  routes.md
documentation/docs/legal/: clinical-safety.md  intellectual-property.md  privacy-impact-assessment.md  privacy-notice.md  privacy-overview.md  terms-of-service.md
documentation/docs/researchers/: api.md
envs/: .example.env
rcpch_nhs_organisations/: asgi.py  celery.py  example.env  logging_settings.py  settings.py  urls.py  wsgi.py
rcpch_nhs_organisations/hospitals/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
rcpch_nhs_organisations/hospitals/constants/: __init__.py  country_codes.py  credentials.py  northern_ireland_postcodes.py  paediatric_diabetes_networks.py  paediatric_diabetes_units.py  rcpch_organisations.py  scottish_postcodes.py  welsh_postcodes.py
rcpch_nhs_organisations/hospitals/general_functions/: __init__.py  ods_calls.py  ods_update.py  organisation_from_ods_code.py  postcode_api.py  synchronise_with_rcpch.py
rcpch_nhs_organisations/hospitals/migrations/: 0001_initial.py  0002_seed_abstraction_levels.py  0003_alter_organisation_ods_code_and_more.py  0004_jerseyboundaries.py  0005_alter_country_bng_e_alter_country_bng_n_and_more.py  0005_seed_jersey.py  0006_paediatricdiabetesnetwork_and_more.py
rcpch_nhs_organisations/hospitals/models/: __init__.py  country.py  general_practice.py  jersey_boundary.py  local_health_board.py  london_borough.py  nhs_england_region.py  open_uk_network.py  organisation.py  paediatric_diabetes_network.py  paediatric_diabetes_unit.py  rcpch_user.py  trust.py
rcpch_nhs_organisations/hospitals/serializers/: __init__.py  country.py  general_practice.py  integrated_care_board.py  local_health_board.py  london_borough.py  nhs_england_region.py  openuk_network.py  organisation.py  paediatric_diabetes_network.py  paediatric_diabetes_unit.py  trust.py
rcpch_nhs_organisations/hospitals/views/: __init__.py  country.py  integrated_care_board.py  local_health_board.py  london_borough.py  nhs_england_region.py  trust.py  (+2 more)
requirements/: common-requirements.txt  development-requirements.txt
(+24 files in other folders)
